sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value i
		if (plusPetit(i,i+1)) {
                              ^AlgGnomeSort:11: error: not found: value i
			echange(i,i+1)
                                ^